--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.10",
-    "@mui/x-data-grid": "^5.17.24",
-    "@next/font": "13.1.6",
-    "antd": "^5.2.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-resizable": "^3.0.4"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://gitname.github.io/react-gh-pages",
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.9",
+        "@mui/material": "^5.11.10",
+        "@mui/x-data-grid": "^5.17.24",
+        "@next/font": "13.1.6",
+        "antd": "^5.2.1",
+        "eslint": "8.34.0",
+        "eslint-config-next": "13.1.6",
+        "gh-pages": "^5.0.0",
+        "next": "13.1.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-resizable": "^3.0.4"
+    }
 }
