--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://gitname.github.io/react-gh-pages",
+    "homepage": "https://igor432.github.io/quiz_app/",
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
