--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-resizable": "^3.0.4"
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.1.0"
     }
 }
