--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "@mui/x-data-grid": "^5.17.24",
         "@next/font": "13.1.6",
         "antd": "^5.2.1",
-        "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "gh-pages": "^5.0.0",
         "next": "13.1.6",
@@ -28,6 +27,9 @@
         "react-resizable": "^3.0.4"
     },
     "devDependencies": {
-        "babel-eslint": "^10.1.0"
+        "@babel/core": "^7.21.0",
+        "@babel/eslint-parser": "^7.19.1",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^8.34.0"
     }
 }
