--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
         "@mui/material": "^5.11.10",
         "@mui/x-data-grid": "^5.17.24",
         "@next/font": "13.1.6",
+        "@reduxjs/toolkit": "^1.9.3",
         "antd": "^5.2.1",
         "eslint-config-next": "13.1.6",
         "gh-pages": "^5.0.0",
         "next": "13.1.6",
+        "next-redux-wrapper": "^8.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-resizable": "^3.0.4"
+        "react-redux": "^8.0.5",
+        "react-resizable": "^3.0.4",
+        "redux": "^4.2.1",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.2"
     },
     "devDependencies": {
         "@babel/core": "^7.21.0",
