--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "gh-pages": "^5.0.0",
         "next": "13.1.6",
         "next-redux-wrapper": "^8.1.0",
+        "notiflix": "^3.2.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-redux": "^8.0.5",
